<resources>
    <string name="app_name">ChatWithStranger</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="register">ĐĂNG KÝ</string>
    <string name="back">QUAY LẠI</string>
    <string name="gender">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="username">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="fullname">Họ và tên</string>
    <string name="remember_pass">Nhớ mật khẩu</string>
    <string name="login_fail">Tài khoản hoặc mật khẩu chưa chính xác!</string>
    <string name="check_internet">Vui lòng kiểm tra kết nối mạng của bạn.</string>
    <string name="try_again">Thử lại</string>
    <string name="exit">Thoát</string>
    <string name="insert_info">Bạn cần nhập đủ thông tin!</string>
    <string name="exists_user">Tên tài khoản của bạn đã được sử dụng.</string>
    <string name="register_fail">Đăng ký thất bại.</string>
    <string name="profile">Thông tin</string>
    <string name="list_friend">Bạn bè</string>
    <string name="chat">Chat</string>
    <string name="email">Email</string>
    <string name="phone">Số điện thoại</string>
    <string name="cancle">Thoát</string>
    <string name="ok">Ok</string>
    <string name="change_name_fail">Đổi tên thất bại</string>
    <string name="new_name">Nhập tên mới...</string>
    <string name="new_pass">Nhập mật khẩu mới...</string>
    <string name="old_pass">Nhập mật khẩu cũ...</string>
    <string name="change_pass_fail">Đổi mật khẩu thất bại.</string>
    <string name="new_email">Nhập email mới...</string>
    <string name="new_phone">Nhập số điện thoại mới...</string>
    <string name="change_email_fail">Đổi email thất bại.</string>
    <string name="change_phone_fail">Đổi số điện thoại thất bại.</string>
    <string name="change_gender_fail">Đổi giới tính thất bại.</string>
    <string name="upimage_fail">Đổi ảnh thất bại.</string>
    <string name="logout">ĐĂNG XUẤT</string>
    <string name="friends">Danh sách bạn bè</string>
    <string name="blocks">Chặn</string>
    <string name="text_message">Aa</string>
    <string name="list_chat">Danh sách hội thoại</string>
    <string name="chatting">Nhắn tin</string>
    <string name="stranger">Người lạ</string>
    <string name="list_stranger">Danh sách người lạ</string>
    <string name="yes">Chấp nhận</string>
    <string name="no">Từ chối</string>
    <string name="list_request">Lời mời kết bạn</string>
    <string name="question">Bạn có muốn gửi lời mời kết bạn cho người này không?</string>
    <string name="add">Kết bạn</string>
</resources>
