<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:background="@color/colorPrimary"
                    android:padding="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_gravity="center"
                        android:id="@+id/imProfile"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user"
                        android:layout_width="100dp"
                        android:layout_height="100dp" />

                    <com.example.quang.chatwithstranger.views.CustomTextView
                        android:layout_width="wrap_content"
                        android:text="Name"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/ic_mode_edit_white_24dp"
                        android:id="@+id/tvNameProfile"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorBackround"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.quang.chatwithstranger.views.CustomTextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:text="@string/username"
                    android:drawablePadding="3dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_action_user"
                    style="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.example.quang.chatwithstranger.views.CustomTextView
                android:layout_width="wrap_content"
                android:text="@string/username"
                android:id="@+id/tvUserProfile"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:layout_marginLeft="60dp"
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.quang.chatwithstranger.views.CustomTextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:text="@string/password"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:drawablePadding="3dp"
                    android:drawableLeft="@drawable/ic_action_pass"
                    style="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/imEditPass"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.example.quang.chatwithstranger.views.CustomTextView
                android:layout_width="wrap_content"
                android:text="@string/password"
                android:id="@+id/tvPassProfile"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:layout_marginLeft="60dp"
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.quang.chatwithstranger.views.CustomTextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:text="@string/email"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:drawablePadding="3dp"
                    android:drawableLeft="@drawable/ic_action_email"
                    style="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/imEditEmail"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.example.quang.chatwithstranger.views.CustomTextView
                android:layout_width="wrap_content"
                android:text="@string/email"
                android:id="@+id/tvEmailProfile"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:layout_marginLeft="60dp"
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.quang.chatwithstranger.views.CustomTextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:text="@string/phone"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:drawablePadding="3dp"
                    android:drawableLeft="@drawable/ic_action_phone"
                    style="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/imEditPhone"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.example.quang.chatwithstranger.views.CustomTextView
                android:layout_width="wrap_content"
                android:text="@string/phone"
                android:id="@+id/tvPhoneProfile"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:layout_marginLeft="60dp"
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.quang.chatwithstranger.views.CustomTextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:text="@string/gender"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:drawablePadding="3dp"
                    android:drawableLeft="@drawable/ic_action_gender"
                    style="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/imEditGender"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.example.quang.chatwithstranger.views.CustomTextView
                android:layout_width="wrap_content"
                android:text="@string/gender"
                android:id="@+id/tvGenderProfile"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnLogout"
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBackround"
                android:text="@string/logout"
                android:layout_marginBottom="70dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/background_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>